<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.simpledao</groupId>
    <artifactId>simpledao</artifactId>
    <version>2.9.6</version>
    <name>SimpleDAO</name>

    <properties>
        <java.version>21</java.version>
        <commons.beanutils.version>1.9.4</commons.beanutils.version>
        <dbcp2.version>2.12.0</dbcp2.version>
        <lombok.version>1.18.30</lombok.version>
        <log4j.slf4j2.impl.version>2.23.1</log4j.slf4j2.impl.version>
        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
    </properties>

    <distributionManagement>
      <repository>
        <id>github</id>
        <name>SimpleDAO</name>
        <url>https://maven.pkg.github.com/utahdws/webteam-simpledao-fork</url>
      </repository>
    </distributionManagement>
  
    <dependencies>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>${commons.beanutils.version}</version>
            <exclusions>
                    <exclusion>
                        <!-- Address one CVE -->
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <version>${dbcp2.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j.slf4j2.impl.version}</version>
        </dependency>

    </dependencies>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>github</id>
            <name>github</name>
            <url>https://maven.pkg.github.com/utahdws/*</url>
        </repository>
    </repositories>

</project>
